Update for libpredict v2.0

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,10 +1,12 @@
-
-SRCS = main.c
-
-CFLAGS = -Og -Wall
+CC = gcc
+COPT = -O3
+CFLAGS = -Wall -Wextra -Wpedantic -Werror -std=gnu11 -D_GNU_SOURCE
+CFLAGS += -D BUILD_VERSION="\"$(shell git describe --dirty --always)\""	\
+		-D BUILD_DATE="\"$(shell date '+%Y-%m-%d_%H:%M:%S')\""
 
 LIBPREDICT_DIR = ..
-SRCS += $(LIBPREDICT_DIR)/julian_date.c \
+LIBPREDICT_SRCS = $(LIBPREDICT_DIR)/julian_date.c \
+		$(LIBPREDICT_DIR)/moon.c \
 		$(LIBPREDICT_DIR)/observer.c \
 		$(LIBPREDICT_DIR)/orbit.c \
 		$(LIBPREDICT_DIR)/refraction.c \
@@ -13,8 +15,19 @@ SRCS += $(LIBPREDICT_DIR)/julian_date.c \
 		$(LIBPREDICT_DIR)/sun.c \
 		$(LIBPREDICT_DIR)/unsorted.c
 
-LDFLAGS = -lm
+BIN = example
+SRC = main.c \
+	$(LIBPREDICT_SRCS)
+
+LIBSDIR = 
+LIBS = -lm
 
 all:
+	$(CC) $(COPT) $(CFLAGS) $(SRC) -o $(BIN) $(LIBSDIR) $(LIBS)
 
-	gcc $(SRCS) $(CFLAGS) $(LDFLAGS) -o example
+debug: COPT = -Og -ggdb -fno-omit-frame-pointer -D__DEBUG
+debug: all
+
+clean:
+	rm -fv $(BIN)
+
