--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,13 @@ language: c
 git:
   depth: 1
 
+# Use GCC 7
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-7
+
 # Command to run tests
 script: cd example/ && make
