test/: Add test of SGP4 & SDP4 against SpaceTrack Report No. 3 Sample Test Cases.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,5 @@ script:
   - sudo ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
   - cd example/ && make
   - ./example
+  - cd ../test/ && make
+  - ./test
